--- a/app/assets/stylesheets/components/_dropdowns.scss
+++ b/app/assets/stylesheets/components/_dropdowns.scss
@@ -239,9 +239,9 @@
 // BOARD END
 
 // PROJECT START
-.project-button-container {
-    position: absolute;
-}
+// .project-button-container {
+//     position: absolute;
+// }
 
 .project-dropdown-button {
     display: flex;
@@ -268,7 +268,7 @@
 }
 
 .project-display-dropdown {
-    top: 5%;
+    // top: 5%;
     position: absolute;
     border-radius: 10px;
     background-color: white;
