--- a/app/assets/stylesheets/components/sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar.scss
@@ -2,7 +2,7 @@
     display: block;
     height: 100vh;
     width: 65px;
-    overflow: hidden;
+    overflow-y: hidden;
     z-index: 1;
     border-right: 2px solid black;
     background-color: rgb(46, 53, 80);
